# flexo_syside

./: .gitignore  .tmp_alpha.sysml  .tmp_beta.sysml  README.md  conftest.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: sonarqube.yml  test-flexo-syside.yml
examples/: Flashlight_1.sysml  basic_notebook.ipynb  delete_case_notebook.ipynb  fl.sysml  lemontree_diff.ipynb  lt_base.json  lt_branch.json  lt_merged.json  min2max.ipynb  multi_root_namespace.ipynb  pu-exchange-out-syside-wrapped-commit.json  pu-exchange-out.sysml  starkit_molecule_no_library_packages.sysml  t-v1.json  t-v1.sysml  t-v2.json  t-v2.sysml  t-v3.sysml  t-v4.sysml  t-v5.sysml  t-v6.sysml  t.sysml  test-out-syside-wrapped-commit.json  test.sysml  test2.sysml
examples/multi_namespace/: FlashlightContextClassExercise.sysml  FlashlightStarterModel.sysml
scripts/: commit_to_flexo_demo.py  retrieve_latest_model_demo.py
src/flexo_syside_lib/: __init__.py  api.py  api_expand.py  committer.py  config.py  core.py  core_multi_namespace.py  expansion.py  library_sync.py  model_walk.py  payload.py  retriever.py  serde.py  utils.py  utils2.py
tests/: Test1.sysml  Test3.sysml  Test4.sysml  conftest.py  library.sysml  test_api_expand.py  test_committer.py  test_core.py  test_core_multi_namespace.py  test_library_sync.py  test_mocked_syside.py  test_multi_namespace.py  test_payload_and_api.py  test_roundtrip_and_expansion.py
tests/fixtures/: Drone2.sysml  Flashlight.sysml  Test2.sysml  Test5.sysml  Test6.sysml  pu-simple.sysml  pu.sysml
(+1 files in other folders)
