[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flexo_syside_lib"
version = "0.2.0"
description = "Using syside sysmlv2 with Flexo"
authors = [{name="Robert Karban", email="robert.karban@planetaryutilities.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
